# md2word_agent

./: .gitignore  CODEX_HANDOFF.md  PROJECT_PLAN.md  PROJECT_TREE.md  RESEARCH_PROBLEM.md  complete.md  pyproject.toml
api/: README.md
data/rules/: sample_author_guidelines.md
intermediate_outputs/: README.md
intermediate_outputs/template_understanding/: README.md
schemas/: content_intent.schema.json  document_ir.schema.json  template_requirement.schema.json
scripts/: parse_docx_template.py  parse_rule_text.py  run_api_server.py
src/md2word_agent/: __init__.py
src/md2word_agent/api/: __init__.py  server.py  service.py
src/md2word_agent/input/: __init__.py  router.py
src/md2word_agent/llm/: __init__.py  config.py  factory.py  kimi_client.py  minimax_client.py  zhipu_client.py
src/md2word_agent/merger/: __init__.py  template_spec_merger.py
src/md2word_agent/parser/: __init__.py  docx_reader.py  models.py  rule_parser.py  template_file_parser.py
src/md2word_agent/planner/: __init__.py  template_understanding.py
src/md2word_agent/specs/: __init__.py  models.py
tests/: __init__.py  test_llm_config.py  test_llm_factory.py
tests/api/: test_service.py
tests/input/: __init__.py  test_router.py
tests/merger/: test_template_spec_merger.py
tests/parser/: test_docx_reader.py  test_rule_parser.py
tests/planner/: test_template_understanding.py
tests/specs/: test_models.py
