[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "md2word-agent"
version = "0.1.0"
description = "Initial scaffolding for structure-semantic alignment research on academic document generation"
readme = "PROJECT_PLAN.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
